# assistant-ui

./: .gitattributes  .gitignore  .npmrc  CONTRIBUTING.md  README.md  SECURITY.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.changeset/: config.json  new-weeks-repeat.md
.devcontainer/: devcontainer.json
.github/workflows/: autofix.yaml  changeset.yaml  claude-code-review.yml  claude.yml  code-quality.yaml  devtools-frame.yaml  npm-publish.yaml  registry-sync-check.yaml  registry.yaml
apps/devtools-extension/: background.ts  content.ts  devtools-panel.tsx  devtools.ts  inject.ts  manifest.json  package.json  tsconfig.json
apps/devtools-extension/scripts/: build-extension.mts
apps/devtools-extension/static/: devtools-panel.html  devtools.html
apps/devtools-frame/: package.json  tsconfig.json
apps/devtools-frame/app/: globals.css  layout.tsx  page.tsx
apps/devtools-frame/components/: DevToolsUI.tsx
apps/devtools-frame/components/thread/: ThreadDetails.tsx  types.ts  utils.ts
apps/devtools-frame/components/ui/: CenteredMessage.tsx  ControlButton.tsx  InfoCard.tsx  JSONPreview.tsx  SectionTitle.tsx  SummaryItem.tsx  index.ts
apps/docs/: .gitignore  mdx-components.tsx  next.config.ts  package.json  source.config.ts  tsconfig.json
apps/docs/app/: globals.css  layout.tsx  provider.tsx
apps/docs/app/(home)/: DocsRuntimeProvider.tsx  layout.tsx  page.tsx
apps/docs/app/docs/: layout.tsx
apps/docs/app/examples/: layout.tsx
apps/docs/app/safe-content-frame/: layout.tsx  page.tsx  safe-content-frame-layout-client.tsx
apps/docs/app/static.json/: route.ts
apps/docs/app/tw-shimmer/: layout.tsx  page.tsx  tw-shimmer-layout-client.tsx
apps/docs/components/assistant-ui/: attachment-old.tsx  attachment.tsx  reasoning.tsx  shiki-highlighter.tsx  thread-list.tsx
apps/docs/components/careers/: ApplyForm.tsx
apps/docs/components/docs/: DataAttributesTable.tsx  ParametersTable.tsx  SidebarHiringBanner.tsx  (+5 more)
apps/docs/hooks/: use-persistent-boolean.ts
apps/docs/lib/: examples.ts  get-llm-text.ts  layout.shared.tsx  source.tsx
apps/docs/scripts/: generate-docs.mts
apps/registry/: package.json  tsconfig.json
apps/registry/scripts/: build-registry.ts
apps/registry/src/: registry.ts  schema.ts
examples/with-ag-ui/: package.json
examples/with-ag-ui/app/: MyRuntimeProvider.tsx  layout.tsx  page.tsx
examples/with-ai-sdk-v5/: README.md  next.config.js  package.json
examples/with-ai-sdk-v5/app/: layout.tsx  page.tsx
examples/with-assistant-transport/: README.md  next.config.js  package.json
examples/with-assistant-transport/app/: MyRuntimeProvider.tsx  layout.tsx  page.tsx
examples/with-cloud/: package.json
examples/with-cloud/app/: MyRuntimeProvider.tsx  layout.tsx
examples/with-custom-thread-list/: package.json
examples/with-custom-thread-list/app/: MyRuntimeProvider.tsx  layout.tsx  page.tsx
examples/with-external-store/: package.json
examples/with-external-store/app/: layout.tsx
examples/with-ffmpeg/: package.json
examples/with-ffmpeg/app/: MyRuntimeProvider.tsx  layout.tsx  page.tsx
examples/with-langgraph/: README.md  next.config.ts  package.json
examples/with-langgraph/app/: MyRuntimeProvider.tsx  page.tsx
examples/with-langgraph/lib/: chatApi.ts
examples/with-parent-id-grouping/: README.md  package.json
examples/with-parent-id-grouping/app/: MyRuntimeProvider.tsx  page.tsx
examples/with-react-hook-form/: package.json
examples/with-react-hook-form/app/: MyRuntimeProvider.tsx  layout.tsx  page.tsx
examples/with-store/: README.md  package.json  tsconfig.json
examples/with-store/app/: page.tsx
examples/with-store/lib/: example-app.tsx
examples/with-tanstack/: .cta.json  package.json  tsconfig.json  vite.config.ts
python/assistant-stream/: README_LANGGRAPH.md  pyproject.toml
python/assistant-stream/src/assistant_stream/: __init__.py  assistant_stream_chunk.py  create_run.py  state_manager.py  state_proxy.py
python/assistant-stream/src/assistant_stream/modules/: langgraph.py  langgraph_chunk_merge.py  tool_call.py
python/assistant-stream/src/assistant_stream/serialization/: __init__.py  assistant_transport.py  data_stream.py
python/assistant-stream/tests/: test_assistant_transport.py  test_langgraph.py  test_reasoning.py
python/assistant-transport-backend/: .env.example  README.md  main.py  pyproject.toml  requirements.txt  setup.py
python/assistant-transport-backend-langgraph/: .env.example  langgraph.json  main.py  pyproject.toml  requirements.txt  test_client.py  test_subgraph.py
python/assistant-ui-sync-server-api/: .gitignore  README.md  pyproject.toml
python/assistant-ui-sync-server-api/examples/: basic_example.py
python/assistant-ui-sync-server-api/scripts/: deploy.sh
python/assistant-ui-sync-server-api/src/assistant_ui/: __init__.py  client.py  types.py
python/assistant-ui-sync-server-api/tests/: __init__.py  test_client.py
python/state-test/: README.md  pyproject.toml  requirements.txt  server.py
scripts/: check-registry-sync.sh  sync-registry-components.sh  update-shadcn-components.sh
(+192 files in other folders)
